$Id: History,v 1.42 2002-08-13 18:17:52 asaim Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

Aug 13 2002, M.Asai (event-V04-01-01)
- G4Event: Introducing an EventAborted flag.

Jun 29 2002, V.Ivantchenko (event-V04-01-00)
- G4PrimaryParticle: fixed initialisation of 'charge' in constructors.

Jun 8 2002, M.Asai (event-V04-00-04)
- Fix G4TrajectoryContainer to be compliant to gcc-3.1.

May 29 2002, M.Asai (event-V04-00-03)
- Added TransferOneStackedTrack() method to G4StackManager.

May 15 2002, M.Asai (event-V04-00-02)
- Introducing new G4TrajectoryContainer class which aggregates STL vector,
  instead of deriving from STL vector.

Feb 26 2002, G.Cosmo (event-V04-00-01)
- Optimised implementation of SetNewValue() in G4ParticleGunMessenger and
  G4GeneralParticleSourceMessenger to allow porting on WIN32-VC for optimised
  compilation.

Jan 22 2002, M.Asai (event-V04-00-00)
- Remove the check G4PrimaryTransformer whether the primary vertex is inside
  the world volume. The check has been moved to G4SteppingManager.

Nov 21 2001, M.Asai (event-V03-02-09)
- G4PrimaryTransformer.cc: now considering case where a primary is placed on the
  boundary of the world volume. Added units.
