@@ -1,4 +1,4 @@
-$Id: History,v 1.42 2002-08-13 18:17:52 asaim Exp $
+$Id: History,v 1.43 2002-08-19 20:20:18 asaim Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,9 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+Aug 19 2002, M.Asai 
+- Change the default value of charge for G4PrimaryParticle.
 
 Aug 13 2002, M.Asai (event-V04-01-01)
 - G4Event: Introducing an EventAborted flag.
